--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,54 @@
+def CREDENTIALS_LOCATION = "credentials.properties"
+
 apply plugin: 'java'
 apply plugin: 'maven'
 
-version = '1.0'
+allprojects {
+    group = 'org.spine3.tools'
+    version = '1.0'
+}
+
+project.ext {
+    MAVEN_REPOSITORY_URL = 'http://maven.teamdev.com/repository/spine'
+}
+
+def repositoryUserName = null
+def repositoryUserPassword = null
+Properties properties = new Properties()
+File credentialsFile = file(CREDENTIALS_LOCATION)
+if (credentialsFile.exists()) {
+    properties.load(credentialsFile.newDataInputStream())
+
+    repositoryUserName = properties.getProperty("user.name")
+    repositoryUserPassword = properties.getProperty("user.password")
+}
+
+subprojects {
+    apply plugin: 'maven-publish'
+
+    publishing {
+        publications {
+            mavenJava(MavenPublication) {
+                groupId "${group}"
+                artifactId "${project.name}"
+                version "${project.version}"
+
+                from components.java
+            }
+        }
+    }
+    publishing {
+        repositories {
+            maven {
+                credentials {
+                    username "${repositoryUserName}"
+                    password "${repositoryUserPassword}"
+                }
+                url "${project.MAVEN_REPOSITORY_URL}"
+            }
+        }
+    }
+}
 
 repositories {
     mavenCentral()
@@ -9,4 +56,22 @@ repositories {
 
 dependencies {
 
+}
+
+task readPublishingCredentials << {
+    if (repositoryUserName == null || repositoryUserPassword == null) {
+        throw new InvalidUserDataException("Please set up valid credentials. " +
+                "Credentials should be set in ${CREDENTIALS_LOCATION} file in the project\'s root.")
+    }
+    println "Publishing build as ${repositoryUserName}"
+}
+
+task publish << {}
+
+subprojects.each { project ->
+    def credentialsTask = getTasksByName("readPublishingCredentials", false)
+    project.getTasksByName("publish", false).each { task ->
+        task.dependsOn credentialsTask
+    }
+    publish.dependsOn project.getTasksByName("publish", false)
 }
