--- a/proto-lookup-plugin/build.gradle
+++ b/proto-lookup-plugin/build.gradle
@@ -1,7 +1,5 @@
 description = 'Makes generated protos visible for root Spine module'
 
-
-
 apply plugin: 'maven'
 apply plugin: 'groovy'
 apply plugin: 'idea'
@@ -13,6 +11,8 @@ repositories {
 dependencies {
     compile gradleApi()
     compile localGroovy()
+
+    compile group: 'org.slf4j', name:'slf4j-api', version: '1.6.4'
 }
 
 sourceSets {
