Include grpc-compiler-plugin as a module for tools project.

--- a/proto-lookup-plugin/build.gradle
+++ b/proto-lookup-plugin/build.gradle
@@ -21,3 +21,15 @@ sourceSets {
         groovy.srcDirs = ["plugin/src/main/groovy"]
     }
 }
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            groupId "${group}"
+            artifactId "${project.name}"
+            version "${project.version}"
+
+            from components.java
+        }
+    }
+}
