--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,8 @@
 rootProject.name = 'tools'
 
 include 'proto-lookup-plugin'
+include 'grpc-compiler-plugin'
 
 project(':proto-lookup-plugin').projectDir = "$rootDir/proto-lookup-plugin" as File
+project(':grpc-compiler-plugin').projectDir = "$rootDir/grpc-compiler-plugin" as File
 
