--- a/grpc-compiler-plugin/CMakeLists.txt
+++ b/grpc-compiler-plugin/CMakeLists.txt
@@ -4,7 +4,7 @@ project(ProtoCompilerPlugin)
 set(CMAKE_EXE_LINKER_FLAGS "-lprotoc -lprotobuf -static-libgcc -static-libstdc++ -s")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(SOURCE_FILES src/main/cpp/main.cpp src/main/cpp/codegen.h src/main/cpp/handler_printer.h src/main/cpp/handler_printer.cpp src/main/cpp/service_printer.cpp src/main/cpp/service_printer.h)
+set(SOURCE_FILES src/main/cpp/main.cpp src/main/cpp/codegen.h src/main/cpp/handler_printer.h src/main/cpp/js_printer.h src/main/cpp/handler_printer.cpp src/main/cpp/service_printer.cpp src/main/cpp/service_printer.h src/main/cpp/js_printer.cpp)
 add_executable(ProtoCompilerPlugin ${SOURCE_FILES})
 
 INCLUDE_DIRECTORIES(src/protobuf/src)
