Add Failures generation plugin. Add Failures generation plugin sample.

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,10 @@
 rootProject.name = 'tools'
 
 include 'proto-lookup-plugin'
+include 'failures-gen'
+include 'failures-gen-sample'
 
 project(':proto-lookup-plugin').projectDir = "$rootDir/proto-lookup-plugin" as File
+project(':failures-gen').projectDir = "$rootDir/failures-gen" as File
+project(':failures-gen-sample').projectDir = "$rootDir/failures-gen-sample" as File
 
