--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,10 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+# Include Gradle Wrapper into distribution
+!/gradle/wrapper/gradle-wrapper.jar
+
 *.iml
 credentials.properties
+
+*/generated/*
