--- a/failures-gen-sample/build.gradle
+++ b/failures-gen-sample/build.gradle
@@ -4,6 +4,9 @@ version '1.0'
 buildscript {
     repositories {
         mavenLocal()
+        maven {
+            url = 'http://maven.teamdev.com/repository/spine'
+        }
         mavenCentral()
     }
     dependencies {
@@ -23,6 +26,9 @@ apply plugin: 'org.spine3.tools.failuresgen'
 
 repositories {
     mavenLocal()
+    maven {
+        url = 'http://maven.teamdev.com/repository/spine'
+    }
     mavenCentral()
 }
 
