--- a/settings.gradle
+++ b/settings.gradle
@@ -1,10 +1,7 @@
 rootProject.name = 'tools'
 
-include 'proto-lookup-plugin'
-include 'failures-gen'
+include 'protobuf-plugin'
 include 'failures-gen-sample'
 
-project(':proto-lookup-plugin').projectDir = "$rootDir/proto-lookup-plugin" as File
-project(':failures-gen').projectDir = "$rootDir/failures-gen" as File
+project(':protobuf-plugin').projectDir = "$rootDir/protobuf-plugin" as File
 project(':failures-gen-sample').projectDir = "$rootDir/failures-gen-sample" as File
-
