--- a/command-validation-sample/build.gradle
+++ b/command-validation-sample/build.gradle
@@ -1,3 +1,5 @@
+version = '1.0'
+
 buildscript {
     repositories {
         mavenLocal()
@@ -8,7 +10,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.google.protobuf:protobuf-java:3.0.0-beta-2'
-        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.7.4'
+        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.7.0'
         classpath 'org.spine3.tools:protobuf-plugin:1.1'
     }
 }
@@ -20,7 +22,7 @@ apply plugin: 'idea'
 apply plugin: 'org.spine3.tools.protobuf-plugin'
 
 repositories {
-    mavenCentral()
+    mavenLocal()
     maven {
         url = 'http://maven.teamdev.com/repository/spine'
     }
