--- a/protobuf-plugin/build.gradle
+++ b/protobuf-plugin/build.gradle
@@ -5,6 +5,7 @@ apply plugin: 'groovy'
 apply plugin: 'idea'
 
 repositories {
+    mavenLocal()
     mavenCentral()
 }
 
@@ -15,6 +16,8 @@ dependencies {
     compile 'org.slf4j:slf4j-api:1.6.4'
 
     compile 'com.google.protobuf:protobuf-java:3.0.0-beta-2'
+
+    compile 'org.spine3:client:0.2'
 }
 
 sourceSets {
