Add reflections plugin

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,10 @@ include 'protobuf-plugin'
 include 'failures-gen-sample'
 include 'entity-lookup-sample'
 
+include 'reflections-plugin'
+
 project(':protobuf-plugin').projectDir = "$rootDir/protobuf-plugin" as File
 project(':failures-gen-sample').projectDir = "$rootDir/failures-gen-sample" as File
 project(':entity-lookup-sample').projectDir = "$rootDir/entity-lookup-sample" as File
+
+project(':reflections-plugin').projectDir = "$rootDir/reflections-plugin" as File
