--- a/reflections-plugin/plugin/src/main/resources/META-INF/gradle-plugins/reflections-plugin.properties
+++ b/reflections-plugin/plugin/src/main/resources/META-INF/gradle-plugins/reflections-plugin.properties
@@ -19,4 +19,4 @@
 # OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
-implementation-class=com.teamdev.gradle.plugins.ReflectionsPlugin
+implementation-class=org.spine3.gradle.ReflectionsPlugin
