--- a/failures-gen-sample/build.gradle
+++ b/failures-gen-sample/build.gradle
@@ -11,7 +11,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.google.protobuf:protobuf-java:3.0.0-beta-2'
-        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.7.0'
+        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.7.4'
         classpath "org.spine3.tools:protobuf-plugin:1.3"
     }
 }
@@ -39,6 +39,14 @@ protobuf {
     generatedFilesBaseDir = "$projectDir/generated";
     protoc {
         artifact = 'com.google.protobuf:protoc:3.0.0-beta-2'
+    }
+    generateProtoTasks {
+        all().each { task ->
+            task.generateDescriptorSet = true
+            task.descriptorSetOptions.path =
+                    "${projectDir}/build/descriptors/${task.sourceSet.name}.desc"
+            task.descriptorSetOptions.includeImports = true
+        }
     }
 }
 
