--- a/entity-lookup-sample/build.gradle
+++ b/entity-lookup-sample/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     repositories {
         mavenLocal()
         maven {
-            url = 'http://maven.teamdev.com/repository/spine'
+            url = "${project.MAVEN_REPOSITORY_URL}"
         }
         mavenCentral()
     }
@@ -25,7 +25,7 @@ apply plugin: 'org.spine3.tools.protobuf-plugin'
 repositories {
     mavenLocal()
     maven {
-        url = 'http://maven.teamdev.com/repository/spine'
+        url = "${project.MAVEN_REPOSITORY_URL}"
     }
     mavenCentral()
 }
