--- a/failures-gen-sample/build.gradle
+++ b/failures-gen-sample/build.gradle
@@ -12,7 +12,7 @@ buildscript {
     dependencies {
         classpath 'com.google.protobuf:protobuf-java:3.0.0-beta-2'
         classpath 'com.google.protobuf:protobuf-gradle-plugin:0.7.7'
-        classpath "org.spine3.tools:protobuf-plugin:1.4.1"
+        classpath "org.spine3.tools:protobuf-plugin:1.4.5"
     }
 }
 
@@ -31,7 +31,7 @@ repositories {
 }
 
 dependencies {
-    compile 'org.spine3:server:0.2'
+    compile "org.spine3:server:${project.SPINE_VERSION}"
     compile 'com.google.protobuf:protobuf-java:3.0.0-beta-2'
 }
 
