--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,39 @@
-*.class
+# IntelliJ IDEA modules and interim config files.
+*.iml
+.idea/libraries
+.idea/shelf
+.idea/*.xml
 
-# Package Files #
-*.jar
-*.war
-*.ear
+# Do not ignore code style settings.
+!/.idea/codeStyleSettings.xml
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Gradle interim configs
+.gradle/*
 
-# Include Gradle Wrapper into distribution
-!/gradle/wrapper/gradle-wrapper.jar
+# Maven deployment build directory
+/core-java/target
 
-credentials.properties
-
-gradle.properties
-
+# Generated source code
 */generated/*
 
-.idea
+# Gradle build files
+build/*
+*/build/*
+
+# Login details to Maven repository.
+# Each workstation should have developer's login defined in this file.
+credentials.properties
+
+#
+# The gradle.properties file should contain settings specific to a developer's workstation.
+#
+# See sample file for a Mac OS X workstation below.
+# -------
+# # Set Java home to point to JDK7. This is need to generate classes working with Java7 API.
+# # Otherwise the following warning appears during the build:
+# #     warning: [options] bootstrap class path not set in conjunction with -source 1.7
+# #
+# # suppress inspection "UnusedProperty"
+# org.gradle.java.home=/Library/Java/JavaVirtualMachines/jdk1.7.0_80.jdk/Contents/Home/
+# -------
+gradle.properties
