--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
-def CREDENTIALS_LOCATION = "credentials.properties"
+//noinspection GroovyLocalVariableNamingConvention
+final String CREDENTIALS_FILE_PATH = "credentials.properties"
 
 apply plugin: 'maven'
 
@@ -14,7 +15,7 @@ allprojects {
 def repositoryUserName = null
 def repositoryUserPassword = null
 Properties properties = new Properties()
-File credentialsFile = file(CREDENTIALS_LOCATION)
+File credentialsFile = file(CREDENTIALS_FILE_PATH)
 if (credentialsFile.exists()) {
     properties.load(credentialsFile.newDataInputStream())
     repositoryUserName = properties.getProperty("user.name")
@@ -45,6 +46,9 @@ subprojects {
         compile gradleApi()
         compile localGroovy()
         compile group: 'org.slf4j', name:'slf4j-api', version: '1.6.4'
+        testCompile(group: 'junit', name: 'junit', version: '4.12') {
+            exclude(module: 'hamcrest-core')
+        }
     }
 
     sourceSets {
@@ -85,7 +89,7 @@ repositories {
 task readPublishingCredentials << {
     if (repositoryUserName == null || repositoryUserPassword == null) {
         throw new InvalidUserDataException("Please set up valid credentials. " +
-                "Credentials should be set in ${CREDENTIALS_LOCATION} file in the project\'s root.")
+                "Credentials should be set in ${CREDENTIALS_FILE_PATH} file in the project\'s root.")
     }
     println "Publishing build as ${repositoryUserName}"
 }
