--- a/reflections-plugin/build.gradle
+++ b/reflections-plugin/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     compile localGroovy()
 
     compile 'org.reflections:reflections:0.9.10'
+    compile 'dom4j:dom4j:1.6.1'
 
     compile 'org.codehaus.groovy:groovy-all:2.4.4'
     testCompile group: 'junit', name: 'junit', version: '4.11'
@@ -26,5 +27,9 @@ sourceSets {
     main {
         resources.srcDirs += files('plugin/src/main/resources')
         groovy.srcDirs += ['plugin/src/main/groovy']
+    }
+    main {
+        resources.srcDirs += files('plugin/src/test/resources')
+        groovy.srcDirs += ['plugin/src/test/groovy']
     }
 }
