Move classes to `protobuf` package.

--- a/protobuf-plugin/build.gradle
+++ b/protobuf-plugin/build.gradle
@@ -21,4 +21,8 @@ sourceSets {
         resources.srcDirs += files('plugin/src/main/resources')
         groovy.srcDirs += ['plugin/src/main/groovy']
     }
+    main {
+        resources.srcDirs += files('plugin/src/test/resources')
+        groovy.srcDirs += ['plugin/src/test/groovy']
+    }
 }
