--- a/protobuf-plugin/plugin/src/main/resources/META-INF/gradle-plugins/org.spine3.tools.protobuf-plugin.properties
+++ b/protobuf-plugin/plugin/src/main/resources/META-INF/gradle-plugins/org.spine3.tools.protobuf-plugin.properties
@@ -19,4 +19,4 @@
 # OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
-implementation-class=org.spine3.gradle.ProtobufPlugin
+implementation-class=org.spine3.gradle.protobuf.ProtobufPlugin
