--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,3 @@
-//noinspection GroovyLocalVariableNamingConvention
-final String CREDENTIALS_FILE_PATH = "credentials.properties"
-
-apply plugin: 'maven'
 
 allprojects {
     group = 'org.spine3.tools'
@@ -12,6 +8,7 @@ allprojects {
     }
 }
 
+final String CREDENTIALS_FILE_PATH = "credentials.properties"
 def repositoryUserName = null
 def repositoryUserPassword = null
 Properties properties = new Properties()
@@ -53,18 +50,24 @@ subprojects {
         }
     }
 
+    final String SRC_DIR = "$projectDir/plugin/src"
+
     sourceSets {
         main {
-            resources.srcDirs += files("plugin/src/main/resources")
-            groovy.srcDirs = ["plugin/src/main/groovy"]
+            groovy.srcDirs += "$SRC_DIR/main/groovy"
+            resources.srcDirs += "$SRC_DIR/main/resources"
+        }
+        test {
+            groovy.srcDirs += "$SRC_DIR/test/groovy"
+            resources.srcDirs += "$SRC_DIR/test/resources"
         }
     }
 
     publishing {
         publications {
             mavenJava(MavenPublication) {
-                groupId "${group}"
-                artifactId "${project.name}"
+                groupId "$group"
+                artifactId "$project.name"
                 version "${project.version}"
 
                 from components.java
@@ -75,8 +78,8 @@ subprojects {
         repositories {
             maven {
                 credentials {
-                    username "${repositoryUserName}"
-                    password "${repositoryUserPassword}"
+                    username "$repositoryUserName"
+                    password "$repositoryUserPassword"
                 }
                 url "${project.MAVEN_REPOSITORY_URL}"
             }
