Extract plugin version.

--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ allprojects {
     project.ext {
         MAVEN_REPOSITORY_URL = 'http://maven.teamdev.com/repository/spine'
         SPINE_VERSION = "0.5.1-SNAPSHOT"
+        PROTOBUF_PLUGIN_VERSION = "1.4.8"
     }
 }
 
