--- a/protobuf-plugin/build.gradle
+++ b/protobuf-plugin/build.gradle
@@ -1,5 +1,5 @@
 group 'org.spine3.tools'
-version '1.4.8'
+version PROTOBUF_PLUGIN_VERSION
 
 dependencies {
     compile 'com.google.protobuf:protobuf-java:3.0.0-beta-3'
