--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,8 @@ allprojects {
     project.ext {
         MAVEN_REPOSITORY_URL = 'http://maven.teamdev.com/repository/spine'
         SPINE_VERSION = "0.5.1-SNAPSHOT"
-        PROTOBUF_PLUGIN_VERSION = "1.4.8"
+        SPINE_PROTOBUF_PLUGIN_VERSION = "1.4.8"
+        PROTOBUF_VERSION = "3.0.0"
     }
 }
 
@@ -44,6 +45,7 @@ subprojects {
         compile gradleApi()
         compile localGroovy()
 
+        compile "com.google.protobuf:protobuf-java:$PROTOBUF_VERSION"
         compile group: 'org.slf4j', name:'slf4j-api', version: '1.7.12'
 
         testCompile(group: 'junit', name: 'junit', version: '4.12') {
