--- a/protobuf-plugin/build.gradle
+++ b/protobuf-plugin/build.gradle
@@ -1,2 +1,7 @@
 group 'org.spine3.tools'
 version SPINE_PROTOBUF_PLUGIN_VERSION
+
+dependencies {
+    compile gradleApi()
+    compile localGroovy()
+}
