--- a/reflections-plugin/build.gradle
+++ b/reflections-plugin/build.gradle
@@ -4,6 +4,9 @@ group 'org.spine3'
 version '1.0'
 
 dependencies {
+    compile gradleApi()
+    compile localGroovy()
+
     compile 'org.reflections:reflections:0.9.10'
     compile 'dom4j:dom4j:1.6.1'
     compile 'org.codehaus.groovy:groovy-all:2.4.4'
