--- a/failures-gen-sample/build.gradle
+++ b/failures-gen-sample/build.gradle
@@ -43,7 +43,7 @@ protobuf {
         all().each { task ->
             task.generateDescriptorSet = true
             task.descriptorSetOptions.path = "${projectDir}/build/descriptors/${task.sourceSet.name}.desc"
-            task.descriptorSetOptions.includeImports = true
+            task.descriptorSetOptions.includeImports = false
         }
     }
 }
