Set `task.descriptorSetOptions.includeImports` option back to `true` because imported messages may be needed for failures generation.

--- a/map-proto-to-java-sample/build.gradle
+++ b/map-proto-to-java-sample/build.gradle
@@ -56,7 +56,7 @@ protobuf {
         all().each { task ->
             task.generateDescriptorSet = true
             task.descriptorSetOptions.path = "${projectDir}/build/descriptors/${task.sourceSet.name}.desc"
-            task.descriptorSetOptions.includeImports = false
+            task.descriptorSetOptions.includeImports = true
         }
     }
 }
