Minor change to trigger Travis build.

--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,9 @@ allprojects {
 
     project.ext {
         MAVEN_REPOSITORY_URL = 'http://maven.teamdev.com/repository/spine'
-        SPINE_VERSION = "0.5.3-SNAPSHOT"
-        SPINE_PROTOBUF_PLUGIN_VERSION = "1.4.9"
-        PROTOBUF_VERSION = "3.0.0"
+        SPINE_VERSION = '0.5.3-SNAPSHOT'
+        SPINE_PROTOBUF_PLUGIN_VERSION = '1.4.9'
+        PROTOBUF_VERSION = '3.0.0'
         SLF4J_VERSION = '1.7.12'
     }
 }
