--- a/failures-gen-sample/build.gradle
+++ b/failures-gen-sample/build.gradle
@@ -1,4 +1,3 @@
-group 'org.spine3.tools'
 version '1.0'
 
 buildscript {
@@ -6,7 +5,7 @@ buildscript {
         mavenLocal()
         mavenCentral()
         maven {
-            url = "${project.MAVEN_REPOSITORY_URL}"
+            url = mavenRepository
         }
     }
     dependencies {
@@ -25,7 +24,7 @@ apply plugin: 'org.spine3.tools.protobuf-plugin'
 repositories {
     mavenLocal()
     maven {
-        url = "$MAVEN_REPOSITORY_URL"
+        url = mavenRepository
     }
     mavenCentral()
 }
