--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,8 @@ allprojects {
         spineProtobufPluginVersion = '1.4.11'
         protobufVersion = '3.0.0'
         slf4JVersion = '1.7.21'
+        jUnitVersion = '4.12'
+        guavaVersion = '19.0'
     }
 }
 
@@ -51,7 +53,7 @@ subprojects {
 
         //Use jdk14 bindings for test purposes only.
         testCompile group: 'org.slf4j', name: 'slf4j-jdk14', version: slf4JVersion
-        testCompile(group: 'junit', name: 'junit', version: '4.12')
+        testCompile(group: 'junit', name: 'junit', version: jUnitVersion)
     }
 
     final String SRC_DIR = "$projectDir/plugin/src"
