--- a/protobuf-plugin/build.gradle
+++ b/protobuf-plugin/build.gradle
@@ -4,8 +4,7 @@ dependencies {
     compile gradleApi()
     compile localGroovy()
 
-    compile group: 'com.google.guava', name: 'guava', version: '19.0'
-    testCompile 'org.testng:testng:+'
+    compile group: 'com.google.guava', name: 'guava', version: guavaVersion
 }
 
 // This fixes the conflict of dependencies on `groovy-all`.
