Grant permission to publish script in travis config.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,5 @@ before_install:
   - chmod +x gradlew
 
 after_success:
+  - chomd +x ./scripts/publish_artifacts.sh
   - ./scripts/publish_artifacts.sh
