--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ before_install:
   - chmod +x gradlew
 
 after_success:
-  - chomd +x ./scripts/publish_artifacts.sh
+  - chmod +x ./scripts/publish_artifacts.sh
   - ./scripts/publish_artifacts.sh
