--- a/failures-gen-sample/build.gradle
+++ b/failures-gen-sample/build.gradle
@@ -1,5 +1,3 @@
-version '1.0'
-
 buildscript {
     repositories {
         mavenLocal()
@@ -10,7 +8,9 @@ buildscript {
     }
     dependencies {
         classpath 'com.google.protobuf:protobuf-gradle-plugin:0.7.7'
-        classpath "org.spine3.tools:protobuf-plugin:$spineProtobufPluginVersion"
+        classpath "org.spine3.tools:protobuf-plugin:$spineVersion"
+       // classpath "org.spine3.tools:protobuf-plugin:1.4.11"
+
     }
     configurations.all({
         resolutionStrategy.cacheChangingModulesFor(0, 'seconds')
