--- a/map-proto-to-java-sample/build.gradle
+++ b/map-proto-to-java-sample/build.gradle
@@ -12,6 +12,7 @@ buildscript {
             // exclude old Guava version
             exclude group: 'com.google.guava'
         }
+        // TODO:08-11-16:dmytro.dashenkov: Switch dependencies when plugins v0.6.0 are released.
        // classpath group: "org.spine3.tools", name: "protobuf-plugin", version: spineVersion
         classpath group: "org.spine3.tools", name: "protobuf-plugin", version: '1.4.11'
     }
