--- a/failures-gen-sample/build.gradle
+++ b/failures-gen-sample/build.gradle
@@ -24,10 +24,10 @@ apply plugin: 'org.spine3.tools.protobuf-plugin'
 
 repositories {
     mavenLocal()
-    maven {
-        url = spineRepository
-    }
     mavenCentral()
+
+    maven { url = spineRepository }
+    maven { url = spineSnapshotRepository }
 }
 
 dependencies {
