--- a/failures-gen-sample/build.gradle
+++ b/failures-gen-sample/build.gradle
@@ -7,7 +7,7 @@ buildscript {
 
     }
     dependencies {
-        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.7.7'
+        classpath "com.google.protobuf:protobuf-gradle-plugin:${protobufGradlePluginVersion}"
         classpath "org.spine3.tools:protobuf-plugin:$spineVersion"
     }
     configurations.all({
