--- a/map-proto-to-java-sample/build.gradle
+++ b/map-proto-to-java-sample/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     }
     dependencies {
         classpath group: 'com.google.guava', name: 'guava', version: '20.0'
-        classpath ('com.google.protobuf:protobuf-gradle-plugin:0.7.7') {
+        classpath ("com.google.protobuf:protobuf-gradle-plugin:${protobufGradlePluginVersion}") {
             // exclude old Guava version
             exclude group: 'com.google.guava'
         }
