--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,8 @@ buildscript {
 
 allprojects {
     group = 'org.spine3.tools'
-    version = SPINE_VERSION
+    version = '0.6.6-SNAPSHOT'
+//    version = SPINE_VERSION
 
     project.ext {
         spineRepository = 'http://maven.teamdev.com/repository/spine'
@@ -42,6 +43,7 @@ ext {
 subprojects {
     apply plugin: 'maven'
     apply plugin: 'groovy'
+    apply plugin: 'java'
     apply plugin: 'idea'
     apply plugin: 'maven-publish'
 
@@ -75,11 +77,19 @@ subprojects {
 
     sourceSets {
         main {
+            // As per http://stackoverflow.com/questions/22369033/how-to-use-gradle-java-and-groovy-together
+            // java.srcDirs += "$SRC_DIR/main/java"
+            java.srcDirs = []
             groovy.srcDirs += "$SRC_DIR/main/groovy"
+            groovy.srcDirs += "$SRC_DIR/main/java"
             resources.srcDirs += "$SRC_DIR/main/resources"
         }
         test {
+            // As per http://stackoverflow.com/questions/22369033/how-to-use-gradle-java-and-groovy-together
+            // java.srcDirs += "$SRC_DIR/main/java"
+            java.srcDirs = []
             groovy.srcDirs += "$SRC_DIR/test/groovy"
+            groovy.srcDirs += "$SRC_DIR/test/java"
             resources.srcDirs += "$SRC_DIR/test/resources"
         }
     }
