--- a/failures-gen-sample/build.gradle
+++ b/failures-gen-sample/build.gradle
@@ -28,7 +28,8 @@ repositories {
 }
 
 dependencies {
-    compile "org.spine3:spine-server-core:$spineVersion"
+    //compile "org.spine3:spine-server-core:$spineVersion"
+    compile "org.spine3:server:$spineVersion"
 }
 
 protobuf {
