Update sample projects' dependencies.

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 final SPINE_VERSION = '0.7.9-SNAPSHOT'
-final PLUGIN_VERSION = '0.6.6-SNAPSHOT'
+final PLUGIN_VERSION = SPINE_VERSION
 
 buildscript {
     ext {
