--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
-final SPINE_VERSION = '0.7.9-SNAPSHOT'
-final PLUGIN_VERSION = SPINE_VERSION
+final SPINE_VERSION = '0.7.10-SNAPSHOT'
+final PLUGIN_VERSION = '0.7.9-SNAPSHOT'
 
 buildscript {
     ext {
