--- a/protobuf-plugin/build.gradle
+++ b/protobuf-plugin/build.gradle
@@ -1,6 +1,7 @@
 dependencies {
     compile gradleApi()
 
+    compile group: 'com.squareup', name: 'javapoet', version: '1.8.0'
     compile group: 'com.google.guava', name: 'guava', version: guavaVersion
 
     compile project(path: ":common")
