--- a/protobuf-plugin/build.gradle
+++ b/protobuf-plugin/build.gradle
@@ -1,8 +1,14 @@
 dependencies {
     compile gradleApi()
 
+    spineVersion = '0.8.15-SNAPSHOT'
+
     compile group: 'com.squareup', name: 'javapoet', version: '1.8.0'
     compile group: 'com.google.guava', name: 'guava', version: guavaVersion
+    compile "org.spine3:spine-server-core:$spineVersion"
+
+    //todo: delete.
+    compile group: 'com.google.protobuf', name: 'protobuf-java', version: '3.2.0'
 
     compile project(path: ":common")
 }
