Add plugin that checks project files for wrong FQN names in Javadocs.

--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ ext {
     publishPlugin = "$rootDir/scripts/publish.gradle"
 
     credentialsPropertyFile = 'credentials.properties'
-    projectsToPublish = ['common', 'protobuf-plugin', 'reflections-plugin']
+    projectsToPublish = ['common', 'protobuf-plugin', 'reflections-plugin', 'javadocs-checker']
 }
 
 subprojects {
