--- a/protobuf-plugin/build.gradle
+++ b/protobuf-plugin/build.gradle
@@ -1,11 +1,12 @@
 dependencies {
     compile gradleApi()
 
-    spineVersion = '0.8.15-SNAPSHOT'
+    spineVersion = '0.8.17-SNAPSHOT'
 
     compile group: 'com.squareup', name: 'javapoet', version: '1.8.0'
     compile group: 'com.google.guava', name: 'guava', version: guavaVersion
     compile "org.spine3:spine-server-core:$spineVersion"
+    compile "org.spine3:spine-client-core:$spineVersion"
 
     //todo: delete.
     compile group: 'com.google.protobuf', name: 'protobuf-java', version: '3.2.0'
