--- a/protobuf-plugin/build.gradle
+++ b/protobuf-plugin/build.gradle
@@ -1,7 +1,14 @@
+repositories {
+    maven { url = spineRepository }
+    maven { url = spineSnapshotRepository }
+}
+
 dependencies {
     compile gradleApi()
 
+    compile group: 'com.squareup', name: 'javapoet', version: '1.8.0'
     compile group: 'com.google.guava', name: 'guava', version: guavaVersion
+    compile group: 'org.spine3', name: 'spine-client-core', version: spineVersion
 
     compile project(path: ":common")
 }
