--- a/reflections-plugin/build.gradle
+++ b/reflections-plugin/build.gradle
@@ -5,7 +5,9 @@ dependencies {
 
     compile 'org.reflections:reflections:0.9.10'
     compile 'dom4j:dom4j:1.6.1'
-    testCompile 'org.testng:testng:+'
+    //TODO:2017-03-03:illiashepilov: change the testng version to the latest when issue will be fixed
+    // https://github.com/cbeust/testng/issues/1369
+    testCompile 'org.testng:testng:6.10'
 
     compile project(path: ":common")
 }
