--- a/protobuf-plugin/build.gradle
+++ b/protobuf-plugin/build.gradle
@@ -6,6 +6,7 @@ repositories {
 dependencies {
     compile gradleApi()
 
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
     compile group: 'com.squareup', name: 'javapoet', version: '1.8.0'
     compile group: 'com.google.guava', name: 'guava', version: guavaVersion
     compile group: 'org.spine3', name: 'spine-client-core', version: spineVersion
