Revert protobuf plugin version to 0.8.0

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 final SPINE_VERSION = '0.8.17-SNAPSHOT'
-final PLUGIN_VERSION = '0.8.4-SNAPSHOT'
+final PLUGIN_VERSION = '0.8.0'
 
 final PLUGIN_PUBLISH_VERSION = '0.8.4-SNAPSHOT'
 
