Revert `SPINE_VERSION` to 0.8.0

--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-final SPINE_VERSION = '0.8.17-SNAPSHOT'
+final SPINE_VERSION = '0.8.0'
 final PLUGIN_VERSION = '0.8.0'
 
 final PLUGIN_PUBLISH_VERSION = '0.8.4-SNAPSHOT'
