--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,7 @@ subprojects {
         //Use jdk14 bindings for test purposes only.
         testCompile group: 'org.slf4j', name: 'slf4j-jdk14', version: slf4JVersion
         testCompile(group: 'junit', name: 'junit', version: jUnitVersion)
+        testCompile gradleTestKit()
     }
 
     final String SRC_DIR = "$projectDir/plugin/src"
