--- a/protobuf-plugin/build.gradle
+++ b/protobuf-plugin/build.gradle
@@ -3,9 +3,12 @@ repositories {
     maven { url = spineSnapshotRepository }
 }
 
-dependencies {
-    compile gradleApi()
+// Tests use the protobuf plugin.
+test {
+    dependsOn publishToMavenLocal
+}
 
+dependencies {
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
     compile group: 'com.squareup', name: 'javapoet', version: '1.8.0'
     compile group: 'com.google.guava', name: 'guava', version: guavaVersion
