Fix test dependencies

--- a/protobuf-plugin/build.gradle
+++ b/protobuf-plugin/build.gradle
@@ -6,6 +6,7 @@ repositories {
 // Tests use the protobuf plugin.
 test {
     dependsOn publishToMavenLocal
+    dependsOn project(':common').publishToMavenLocal
 }
 
 dependencies {
