Migrate to the latest spine.

--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-final SPINE_VERSION = '0.8.0'
+final SPINE_VERSION = '0.8.222-SNAPSHOT'
 final PLUGIN_VERSION = '0.8.6-SNAPSHOT'
 
 final PLUGIN_PUBLISH_VERSION = '0.8.6-SNAPSHOT'
