Add `--info` flag

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,5 @@ before_install:
 after_success:
   - chmod +x ./scripts/publish_artifacts.sh
   - ./scripts/publish_artifacts.sh
+
+script: ./gradlew check --info
