--- a/javadoc-checker/plugin/src/test/resources/projects/JavaDocCheckerPlugin/build.gradle
+++ b/javadoc-checker/plugin/src/test/resources/projects/JavaDocCheckerPlugin/build.gradle
@@ -1,4 +1,13 @@
 plugins {
     id 'java'
-    id 'org.spine3.tools.javadoc-checker'
+    id 'org.spine3.tools.javadoc-checker' apply false
 }
+
+apply plugin: 'org.spine3.tools.javadoc-checker'
+
+checkJavadoc {
+    threshold = 2
+    reactionType = "error"
+}
+
+
