Apply changes requested in PR comments.

--- a/javadoc-checker/plugin/src/test/resources/projects/JavaDocCheckerPlugin/build.gradle
+++ b/javadoc-checker/plugin/src/test/resources/projects/JavaDocCheckerPlugin/build.gradle
@@ -7,5 +7,5 @@ apply plugin: 'org.spine3.tools.javadoc-checker'
 
 checkJavadoc {
     threshold = thresholdValue
-    reactionType = reactionTypeValue
+    responseType = responseTypeValue
 }
